--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/preact": "^4.1.1",
     "@astrojs/rss": "^4.0.12",
-    "astro": "^5.14.5"
+    "astro": "^5.14.5",
+    "preact": "^10.27.2"
   }
 }
